force-app/main/default/objects/p2s_base1__LifecycleStageSetting__c/p2s_base1__LifecycleStageSetting__c.object-meta.xml
<CustomObject>
    <label>Journey Stage Setting</label>
    <nameField>
        <displayFormat>LS-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journey Stage Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>