force-app/main/default/objects/p2s_base1__LifecycleStageSetting__c/fields/p2s_base1__Active__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activate this Lifecycle Stage</description>
    <inlineHelpText>Activate this Lifecycle Stage</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>