force-app/main/default/objects/p2s_base1__LifecycleStageSetting__c/fields/p2s_base1__ActiveOpportunityForContacts__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ActiveOpportunityForContacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Lifecycle Stage is used for contacts when they are on open opportunities</description>
    <inlineHelpText>This Lifecycle Stage is used for contacts when they are on open opportunities</inlineHelpText>
    <label>Active Opportunity for Contacts</label>
    <type>Checkbox</type>
</CustomField>