force-app/main/default/objects/p2s_base1__LifecycleStageSetting__c/fields/p2s_base1__Description__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>