force-app/main/default/objects/p2s_base1__LifecycleStageSetting__c/fields/p2s_base1__Sequence__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>